# robocup_raspbot

install/: local_setup.sh  setup.sh
install/robocup_bringup/lib/robocup_bringup/: raspbot_camera
install/robocup_bringup/share/robocup_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robocup_bringup/share/robocup_bringup/cmake/: robocup_bringupConfig-version.cmake  robocup_bringupConfig.cmake
install/robocup_bringup/share/robocup_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/robocup_bringup/share/robocup_bringup/launch/: raspbot_bringup.launch.py  raspbot_camera.launch.py
install/robocup_msgs/share/robocup_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robocup_msgs/share/robocup_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_robocup_msgs__rosidl_generator_cExport-noconfig.cmake  export_robocup_msgs__rosidl_generator_cppExport.cmake  export_robocup_msgs__rosidl_generator_pyExport.cmake  export_robocup_msgs__rosidl_typesupport_fastrtps_cExport.cmake  robocup_msgsConfig-version.cmake  robocup_msgsConfig.cmake  robocup_msgs__rosidl_typesupport_cExport-noconfig.cmake  robocup_msgs__rosidl_typesupport_cppExport-noconfig.cmake  robocup_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/robocup_msgs/share/robocup_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/robocup_msgs/share/robocup_msgs/msg/: BoundingBox2D.idl  BoundingBox2D.msg  ObjectDetection2D.idl  ObjectDetection2D.msg  ObjectDetection2DArray.idl  ObjectDetection2DArray.msg
install/robocup_ros/lib/robocup_ros/: camera_line_tracker
install/robocup_ros/share/robocup_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robocup_ros/share/robocup_ros/cmake/: robocup_rosConfig-version.cmake  robocup_rosConfig.cmake
install/robocup_ros/share/robocup_ros/environment/: ament_prefix_path.dsv  path.dsv
install/robocup_srvs/share/robocup_srvs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robocup_srvs/share/robocup_srvs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_robocup_srvs__rosidl_generator_cExport-noconfig.cmake  export_robocup_srvs__rosidl_generator_pyExport.cmake  export_robocup_srvs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_robocup_srvs__rosidl_typesupport_fastrtps_cppExport.cmake  robocup_srvsConfig-version.cmake  robocup_srvsConfig.cmake  robocup_srvs__rosidl_typesupport_cExport.cmake  robocup_srvs__rosidl_typesupport_introspection_cExport-noconfig.cmake  robocup_srvs__rosidl_typesupport_introspection_cExport.cmake  robocup_srvs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/robocup_srvs/share/robocup_srvs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/robocup_srvs/share/robocup_srvs/srv/: ObjectDetection2DService.idl  ObjectDetection2DService.srv  ObjectDetection2DService_Request.msg  ObjectDetection2DService_Response.msg
install/robocup_yolo_v11/lib/robocup_yolo_v11/: yolo_v11_detection_publisher  yolo_v11_detection_server
install/robocup_yolo_v11/share/robocup_yolo_v11/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robocup_yolo_v11/share/robocup_yolo_v11/launch/: yolo_v11_detection_publisher.launch.py  yolo_v11_detection_server.launch.py
install/robocup_yolo_v11/share/robocup_yolo_v11/weights/: yolo11n.pt
install/yahboomcar_msgs/share/yahboomcar_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/yahboomcar_msgs/share/yahboomcar_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  (+8 more)
log/: latest_build
src/robocup_bringup/: CMakeLists.txt  package.xml
src/robocup_bringup/include/robocup_bringup/: raspbot_camera.hpp
src/robocup_bringup/launch/: raspbot_bringup.launch.py  raspbot_camera.launch.py
src/robocup_bringup/node/: raspbot_camera_node.cpp
src/robocup_bringup/src/: raspbot_camera.cpp
src/robocup_interfaces/robocup_msgs/: CMakeLists.txt  package.xml
src/robocup_interfaces/robocup_msgs/msg/: ObjectDetection2DArray.msg
src/robocup_interfaces/robocup_srvs/: CMakeLists.txt
src/robocup_interfaces/robocup_srvs/srv/: ObjectDetection2DService.srv
src/robocup_ros/: CMakeLists.txt
src/robocup_ros/include/robocup_ros/: camera_line_tracker.hpp
src/robocup_ros/include/robocup_ros/image_processor/: line_tracker.hpp
src/robocup_ros/launch/: camera_line_tracker.launch.py
src/robocup_ros/node/: camera_line_tracker_node.cpp
src/robocup_ros/src/: camera_line_tracker.cpp
src/robocup_ros/src/image_processor/: line_tracker.cpp
src/robocup_yolo_v11/: package.xml  setup.cfg  setup.py
src/robocup_yolo_v11/launch/: yolo_v11_detection_publisher.launch.py  yolo_v11_detection_server.launch.py
src/robocup_yolo_v11/robocup_yolo_v11/: yolo_v11_detection_publisher.py  yolo_v11_detection_server.py
src/robocup_yolo_v11/yolo11n_ncnn_model/: metadata.yaml
(+154 files in other folders)
