<?xml version="1.0"?>
<package format="3">

    <!-- Package imformation -->
    <name>robocup_bringup</name>
    <version>0.0.0</version>
    <description>Raspbot ROS2 bringup package</description>

    <!-- Maintainer and author -->
    <maintainer email="mgkilprg@gmail.com">Minkyu Kil</maintainer>
    <author>Minkyu Kil</author>

    <!-- License information -->
    <license>Apache-2.0</license>

    <!-- Build tool : ament_cmake -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Dependencies -->
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>OpenCV</depend>

    <!-- Export build system information -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>