<?xml version="1.0"?>
<package format="3">

    <!-- Package imformation -->
    <name>robocup_yolo_v11</name>
    <version>0.0.0</version>
    <description>Raspbot ROS2 YOLO V11 detection package</description>

    <!-- Maintainer and author -->
    <maintainer email="mgkilprg@gmail.com">Minkyu Kil</maintainer>
    <author>Minkyu Kil</author>

    <!-- License information -->
    <license>Apache-2.0</license>

    <!-- Build tool : ament_python -->
    <buildtool_depend>ament_python</buildtool_depend>

    <!-- Dependencies -->
    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>std_msgs</depend>
    <depend>ultralytics</depend>

    <!-- Export build system information -->
    <export>
        <build_type>ament_python</build_type>
    </export>

</package>